# operations-software-varnish-libvmod-uuid

./: .dir-locals.el  .gitignore  .gitreview  CONTRIBUTING.rst  INSTALL.rst  Makefile.am  README.rst  autogen.sh  configure.ac  vmod-uuid.spec
debian/: changelog  control  copyright  gbp.conf  libvmod-uuid.lintian-overrides  rules
pkg/rpm/: pkg  vmod-uuid.spec
src/: Makefile.am  vmod_uuid.c  vmod_uuid.vcc
src/tests/: test01.vtc  test02.vtc
